cmake_minimum_required(VERSION 3.25)
project(DSA)

set(CMAKE_CXX_STANDARD 17)

add_executable(DSA
        main.cpp
        DynamicProgramming/Memoization/fibonacci.cpp
        DynamicProgramming/Memoization/gridTravel.cpp
        DynamicProgramming/Memoization/canSum.cpp
        DynamicProgramming/Tabulation/fibonacci.cpp
        DynamicProgramming/Memoization/howSum.cpp
        DynamicProgramming/Memoization/bestSum.cpp
        DynamicProgramming/Memoization/canConstruct.cpp
        DynamicProgramming/Memoization/countConstruct.cpp
        DynamicProgramming/Memoization/allConstruct.cpp
        DynamicProgramming/Tabulation/gridTraveler.cpp
        DynamicProgramming/Tabulation/canSum.cpp
        DynamicProgramming/Tabulation/howSum.cpp
        DynamicProgramming/Tabulation/bestSum.cpp
        DynamicProgramming/Tabulation/canPartition.cpp
        DynamicProgramming/Tabulation/coinChange.cpp
        DynamicProgramming/Memoization/coinChange.cpp
        DynamicProgramming/Memoization/minStickers.cpp
        DynamicProgramming/Tabulation/canConstruct.cpp
        DynamicProgramming/Tabulation/countConstruct.cpp
        DynamicProgramming/Tabulation/allConstruct.cpp
        SearchingAndSorting/AStarSearch/astarsearch.cpp
        SearchingAndSorting/AStarSearch/test.cpp
        SearchingAndSorting/AStarSearch/testing.cpp
        Graph/dfs.cpp
        Graph/bfs.cpp
        Graph/hasPath.cpp
        Graph/undirectedPath.cpp
        Graph/connectedComponentsCount.cpp
        Graph/largestComponent.cpp
        Graph/shortestPath.cpp
        Graph/islandCount.cpp
        Graph/minimumIsland.cpp
        "Tree/BinaryTree/depthFirstValues.cpp"
        "Tree/BinaryTree/breadthFirstValues.cpp"
        "Tree/BinaryTree/treeInclude.cpp"
        "Tree/BinaryTree/treeSum.cpp"
        "Tree/BinaryTree/treeMinValue.cpp"
        "Tree/BinaryTree/maxPathSum.cpp"
        Graph/islandPerimeter.cpp
        InterviewQuestions/MinOddNum.cpp
        InterviewQuestions/WordPredictor.cpp
        Stack/BaseballGame.cpp
        LinkedList/SwapNodesInPairs.cpp
        LinkedList/SortList.cpp
        LinkedList/ReverseLinkedList.cpp
        LinkedList/LinkedListVals.cpp
        LinkedList/MaxElement.cpp
        Tree/BinaryTree/inorderTravers.cpp
        Tree/BinaryTree/preorderTravers.cpp
        Tree/BinaryTree/postorderTravers.cpp
        Tree/BinaryTree/invertBinaryTree.cpp
        Tree/BinaryTree/maxDepth.cpp
        Tree/BinaryTree/diameterOfBT.cpp
        Tree/BinaryTree/isSubtree.cpp
        Tree/BinaryTree/sortedArrayToBST.cpp
)
